<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Data Management</string>
   <string name="tab_import">Import Export</string>
   <string name="import_source">Import Source</string>
   <string name="destination">Destination</string>
   <string name="collapse_button_content_description">Collapse Button</string>
   <string name="import_string">Import</string>
   <string name="done">Done</string>
   <string name="type">Type:</string>
   <string name="name">Name:</string>
   <string name="target">Target</string>
   <string name="select_target">Select Target</string>
   <string name="copy_and_replace"><![CDATA[Copy & Replace]]></string>
   <string name="dont_copy">Don\'t Copy</string>
   <string name="keep_both">Copy, but Keep Both Files</string>
   <string name="conflict">Conflict</string>
   <string name="newName">New Filename:</string>
   <string name="calculating_targets">Calculating Targets</string>
   <string name="checking_targets">Checking Potential Targets...</string>
   <string name="checking_conflicts">Checking Conflicts...</string>
   <string name="importing">Importing...</string>
   <string name="select_path">Select Path...</string>
   <string name="continue_string">Continue</string>

</resources>